[tool.poetry]
name = "haunted-houses"
version = "0.1.0"
description = ""
authors = ["Lucas Colombo <lucasncolombo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pest-py = "^0.1.0"
uvicorn = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
